[package]
name = "metrics"
version = "0.1.1"
authors = ["Endre Karlson <endre.karlson@gmail.com>", "Alex Newman <posix4e@gmail.com>"]
description = "Coda Hale style metrics for rust"

documentation = "https://github.com/posix4e/rust-metrics/"
homepage = "https://github.com/posix4e/rust-metrics/"
repository = "https://github.com/posix4e/rust-metrics/"
readme = "README.md"
keywords = ["metrics", "graphite", "ganglia", "opentsdb", "prometheus"]
license = "MIT/Apache-2.0"

[features]
prometheus = [ "prometheus_reporter" ]

[dependencies]
time = "0.1.35"
histogram =  "0.6.1"
log = "0.3.6"
prometheus_reporter = { path = "prometheus_reporter" , optional = true }

[dev-dependencies]
# Our example is a webserver hence iron and hyper
iron = { version="0.3.0"}
hyper =  { version="0.9.9" }
