[package]
name = "metrics"
version = "0.2.2"
authors = ["Alex Newman <posix4e@gmail.com>"]
description = "Coda Hale style metrics for rust"

documentation = "https://github.com/posix4e/rust-metrics/"
homepage = "https://github.com/posix4e/rust-metrics/"
repository = "https://github.com/posix4e/rust-metrics/"
readme = "README.md"
keywords = ["metrics", "graphite", "ganglia", "opentsdb", "prometheus"]
license = "MIT/Apache-2.0"

[features]
prometheus = [ "prometheus_reporter", "protobuf" ]

[dependencies]
time = "0.1.36"
histogram =  "0.6.4"
log = "0.3.6"
prometheus_reporter = { version = "0.0.2" , optional = true }
protobuf = { version="1.2.2", optional = true }

[dev-dependencies]
# Our example is a webserver hence iron and hyper
iron = { version="0.5.1"}
hyper =  { version="0.10.5" }
