[package]
name = "prometheus_reporter"
version = "0.0.2"
authors = ["Alex Newman <posix4e@gmail.com>"]
description = "Prometheus support for rust"

documentation = "https://docs.rs/prometheus_reporter"
homepage = "https://github.com/posix4e/rust-metrics/tree/master/prometheus_reporter"
repository = "https://github.com/posix4e/rust-metrics/tree/master/prometheus_reporter"
readme = "README.md"
keywords = ["metrics", "prometheus" ]
license = "MIT/Apache-2.0"

[dependencies]
time = "0.1.35"
log = "0.3.6"

# should be a dev dependency but this speeds up docker
# We should double check the version
iron = { version="0.4.0" }
hyper =  { version="0.9.10" }
persistent = { version="0.2.0"}
protobuf = { version="1.0.24"}
router = { version="0.2.0"}
lru-cache = { version="0.0.7" }
